# hass-psn

./: .codespell-ignore-words.txt  .cspell.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  hacs.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  codespell.yml  release.yml
custom_components/playstation_network/: __init__.py  binary_sensor.py  config_flow.py  coordinator.py  helpers.py  image.py  manifest.json  media_player.py  notify.py  sensor.py
custom_components/playstation_network/translations/: de.json  en.json  es.json  pt-BR.json
custom_components/psn/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  media_player.py  notify.py  sensor.py  strings.json
custom_components/psn/translations/: en.json
tests/: test_skeleton.py
